--- a/term1week5.ipynb
+++ b/term1week5.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autograder loaded successfully!\n",
-      "Remember to always restart and run all from the Kernel menu before submitting!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from autograder_term1week5 import *\n",
@@ -1010,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1024,27 +1015,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1.5707963267948966+1.3169578969248166j)\n",
+      "(3.141592653589793-1.3169578969248166j)\n",
+      "(-0.5493061443340549+1.5707963267948966j)\n",
+      "(0.6931471805599453+3.141592653589793j)\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign your solutions to the questions above to the variables below.\n",
-    "\n",
-    "q5ia_answer =\n",
-    "q5ib_answer =\n",
-    "q5ic_answer =\n",
-    "q5id_answer =\n",
+    "from cmath import *\n",
+    "q5ia_answer =asin(-2)\n",
+    "q5ib_answer =acos(-2)\n",
+    "q5ic_answer =atanh(-2)\n",
+    "q5id_answer =log(-2)\n",
     "\n",
     "print(q5ia_answer)\n",
     "print(q5ib_answer)\n",
     "print(q5ic_answer)\n",
     "print(q5id_answer)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1060,7 +1061,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 5(i)a passed!\n",
+      "Question 5(i)b passed!\n",
+      "Question 5(i)c passed!\n",
+      "Question 5(i)d passed!\n",
+      "4 out of 4 tests passed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4 Marks\n",
     "# Do not try to delete this cell\n",
@@ -1095,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1109,25 +1132,35 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1.5707963267948966+1.3169578969248166j)\n",
+      "(3.141592653589793-1.3169578969248166j)\n",
+      "(-0.5493061443340549+1.5707963267948966j)\n",
+      "(0.6931471805599453+3.141592653589793j)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign your solutions to the questions above to the variables below.\n",
-    "q5iia_answer =\n",
-    "q5iib_answer =\n",
-    "q5iic_answer =\n",
-    "q5iid_answer =\n",
+    "from cmath import *\n",
+    "q5iia_answer =asin(-2)\n",
+    "q5iib_answer =acos(-2)\n",
+    "q5iic_answer =atanh(-2)\n",
+    "q5iid_answer =log(-2)\n",
     "print(q5iia_answer)\n",
     "print(q5iib_answer)\n",
     "print(q5iic_answer)\n",
     "print(q5iid_answer)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1143,7 +1176,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 5(ii)a passed!\n",
+      "Question 5(ii)b passed!\n",
+      "Question 5(ii)c passed!\n",
+      "Question 5(ii)d passed!\n",
+      "4 out of 4 tests passed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4 Marks\n",
     "# Do not try to delete this cell\n",
@@ -1175,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1189,19 +1244,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "pow expected 2 arguments, got 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m question5iiia_answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mpow\u001b[39m(\u001b[38;5;241m7725423\u001b[39m, \u001b[38;5;241m3835624\u001b[39m, \u001b[38;5;241m25231211\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(q5iiia_answer)\n",
+      "\u001b[0;31mTypeError\u001b[0m: pow expected 2 arguments, got 3"
+     ]
+    }
+   ],
    "source": [
-    "# Assign your solutions to the questions above to the variable below.\n",
-    "question5iiia_answer = \n",
-    "print(q5iiia_answer)\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "question5iiia_answer = pow(7725423, 3835624, 25231211)\n",
+    "print(q5iiia_answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1217,7 +1280,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(question5iiia_answer == question5_iii_a())\n",
@@ -1298,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1314,14 +1385,12 @@
    },
    "outputs": [],
    "source": [
-    "question5iiib_answer = # (delete, and fill in the value 1, 2 or 3)\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "question5iiib_answer = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1337,7 +1406,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(question5iiib_answer == question5_iii_b())\n",
@@ -1366,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1381,7 +1458,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20666298"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import *\n",
     "import builtins\n",
@@ -1418,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1434,14 +1522,13 @@
    },
    "outputs": [],
    "source": [
-    "question5iiic_answer = # (delete, and fill in the value 1, 2 or 3)\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "question5iiic_answer = 3\n",
+    "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1457,7 +1544,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "assert(question5iiic_answer == question5_iii_c())\n",
